# pacman-DR54

./: .gitignore  .gitmodules  README.md
boris_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
boris_moveit_config/config/: boris.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
boris_moveit_config/launch/: boris_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
boris_robot/: CMakeLists.txt  README.md  package.xml
boris_robot/config/: boris_controllers.yaml  hardware_interfaces.yaml
boris_robot/from_golem/: GolemCtrlRobotBorisSim.xml
boris_robot/launch/: bringup.launch  rviz_config.rviz
boris_robot/model/: table.urdf.xacro  torso.urdf.xacro
boris_robot/robot/: boris_exploration.urdf.xacro
demo_logic/: .gitignore  CMakeLists.txt  package.xml
demo_logic/config/: Estimation-Groundtruth.perspective  left_rviz.rviz  right_rviz.rviz
demo_logic/launch/: boris.launch  demo.launch  dr54.rviz  gp_atlas_rrt.launch  rqt_config.perspective  tactile_exploration.launch  vision.launch  vision.launch.xml  vito.launch  vito.launch.xml
demo_logic/msg/: ContactState.msg
demo_logic/src/: DR54Logic.cpp  DR54Logic_bkcup.cpp  contact_observer.cpp
demo_logic/srv/: GetPathLog.srv
report/: .gitignore  CMakeLists.txt  README.md  box.eps  report.bib  report.tex  ws-ijhr-tactile-exploration.tex  ws-ijhr.cls
report/bib/: marco.bib  report.bib
report/img/: bowlA_recon.stl  bowlB_recon.stl  comparison.eps  example.eps  funnel.eps  funnelC.eps  funnelRRT.eps  funnelRRT2.eps  funnelS.eps  meshes.eps  mugS.eps  twoAtlas.eps
report/input/: conclusions.tex  experiments.tex  intro.tex  related.tex  scope.tex  solution.tex
report/input-ijhr/: conclusions.tex  experiments.tex  intro.tex  related.tex  scope.tex  solution.tex
