<?xml version="1.0"?>
<package>
  <name>demo_logic</name>
  <version>0.0.0</version>
  <description>The DR5.4 demo logic package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>

  <license>GPLv2</license>


  <!-- This work has been developed and funded under the PaCMan Project-->
  <url type="website">http://www.pacman-project.eu/</url>


  <author email="cjrosales@gmail.com">Carlos J. Rosales</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>decision_making</build_depend>
  <build_depend>decision_making_parser</build_depend>
  <build_depend>pacman_vision_comm</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>gp_regression</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <!--build_depend>geometric_shapes</build_depend-->

  <run_depend>roscpp</run_depend>
  <run_depend>decision_making</run_depend>
  <run_depend>decision_making_parser</run_depend>
  <run_depend>pacman_vision_comm</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>gp_regression</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>
  </export>
</package>
